--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,9 @@ dependencies {
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
 
+    // Koin
+    implementation 'org.koin:koin-androidx-viewmodel:1.0.2'
+
     // Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
