--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ buildscript {
     ext.androidx_version = '1.0.0'
     ext.kotlin_version = '1.3.0'
     ext.lifecycle_version = '2.0.0'
+    ext.koin_version = '1.0.2'
 
     repositories {
         google()
