disabled Crashlytics for debug; removed all res configurations except eng

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        resConfigs "en"
     }
 
     buildTypes {
@@ -32,6 +33,7 @@ android {
         }
         debug {
             minifyEnabled true
+            ext.enableCrashlytics = false
             signingConfig signingConfigs.debug
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
         }
