--- a/gradle.properties
+++ b/gradle.properties
@@ -2,5 +2,6 @@ org.gradle.caching= true
 org.gradle.daemon=true
 org.gradle.jvmargs=-Xmx3072m
 android.useAndroidX=true
+android.enableR8=true
 android.enableJetifier=true
 kotlin.code.style=official
