corrected build config for debug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,9 @@ android {
         release {
             minifyEnabled true
             shrinkResources true
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
+            minifyEnabled true
             signingConfig signingConfigs.debug
         }
     }
