--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,31 +48,32 @@ android {
 }
 
 dependencies {
-
-    // Core
+    // Androidx
     implementation "com.google.android.material:material:$androidx_version"
     implementation "androidx.core:core-ktx:$androidx_version"
     implementation "androidx.fragment:fragment-ktx:$androidx_version"
 
-    // Kotlin
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
-
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.0.1'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
 
-    // Lifecycle
-    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    // Crashlytics
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
+
+    // Firebase
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-firestore:17.1.3'
 
     // Koin
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-androidx-viewmodel:$koin_version"
 
-    // Retrofit
-    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
-    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
-    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+
+    // Lifecycle
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
 
     // Location
     implementation 'com.google.android.gms:play-services-location:16.0.0'
@@ -81,16 +82,14 @@ dependencies {
     implementation 'com.google.android.gms:play-services-maps:16.0.0'
     implementation 'com.google.maps.android:android-maps-utils:0.5'
 
-    // Firebase
-    implementation 'com.google.firebase:firebase-core:16.0.5'
-    implementation 'com.google.firebase:firebase-firestore:17.1.3'
-
-    // Crashlytics
-    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.6'
-
     // Navigation
     implementation "android.arch.navigation:navigation-fragment-ktx:$navigation_version"
     implementation "android.arch.navigation:navigation-ui-ktx:$navigation_version"
+
+    // Retrofit
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 }
 
 apply plugin: 'com.google.gms.google-services'
