--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 buildscript {
     ext.androidx_version = '1.0.0'
+    ext.coroutines_version ='1.0.1'
+    ext.koin_version = '1.0.2'
     ext.kotlin_version = '1.3.10'
     ext.lifecycle_version = '2.0.0'
-    ext.koin_version = '1.0.2'
-    ext.retrofit_version = '2.4.0'
     ext.navigation_version = '1.0.0-alpha07'
+    ext.retrofit_version = '2.4.0'
 
     repositories {
         google()
@@ -14,10 +15,10 @@ buildscript {
 
     dependencies {
         classpath 'com.android.tools.build:gradle:3.2.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
+        classpath 'io.fabric.tools:gradle:1.26.1'
     }
 }
 
