--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,9 @@
             android:name="org.apache.http.legacy"
             android:required="false" />
 
-        <activity android:name=".presentation.view.general.GeneralActivity">
+        <activity
+            android:name=".presentation.view.general.GeneralActivity"
+            android:windowSoftInputMode="adjustPan">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
