--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
+    ext.anko_version = '0.10.8'
     ext.androidx_version = '1.0.0'
-    ext.coroutines_version ='1.0.1'
+    ext.coroutines_version = '1.0.1'
     ext.koin_version = '1.0.2'
     ext.kotlin_version = '1.3.10'
     ext.lifecycle_version = '2.0.0'
