--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'io.fabric'
 apply plugin: 'androidx.navigation.safeargs'
+apply plugin: 'jacoco-android'
 
 android {
     signingConfigs {
@@ -33,6 +34,8 @@ android {
         debug {
             minifyEnabled true
             signingConfig signingConfigs.debug
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules-debug.pro'
+            testCoverageEnabled true
         }
     }
 
@@ -93,7 +96,7 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation 'com.jakewharton.retrofit:retrofit2-kotlin-coroutines-adapter:0.9.2'
 
-    //Testing
+    // Testing
     testImplementation 'junit:junit:4.12'
 }
 
