--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$navigation_version"
         classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath 'com.dicedmelon.gradle:jacoco-android:0.1.2'
     }
 }
 
