--- a/app/build.gradle
+++ b/app/build.gradle
@@ -104,6 +104,7 @@ dependencies {
     // Testing
     testImplementation 'junit:junit:4.12'
     testImplementation 'org.mockito:mockito-core:2.23.0'
+    testImplementation "org.koin:koin-test:$koin_version"
 }
 
 apply plugin: 'com.google.gms.google-services'
