--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     ext.koin_version = '1.0.2'
     ext.kotlin_version = '1.3.21'
     ext.lifecycle_version = '2.0.0'
-    ext.navigation_version = '1.0.0-beta02'
+    ext.navigation_version = '1.0.0-rc01'
     ext.retrofit_version = '2.5.0'
 
     repositories {
