--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
-org.gradle.caching= true
-org.gradle.daemon=true
+org.gradle.caching=true
 org.gradle.jvmargs=-Xmx3072m
+org.gradle.parallel=true
+
+kotlin.code.style=official
+
 android.useAndroidX=true
 android.enableR8=true
 android.enableJetifier=true
-kotlin.code.style=official
